@@ -183,84 +183,6 @@ class {$project_id}_Controller extends Ethna_Controller
          */
     );
 
-    /**
-     *  @var    array   smarty modifier definition.
-     */
-    var $smarty_modifier_plugin = array(
-        /*
-         *  TODO: write user defined smarty modifier here.
-         *
-         *  Example:
-         *
-         *  'smarty_modifier_foo_bar',
-         */
-    );
-
-    /**
-     *  @var    array   smarty function definition.
-     */
-    var $smarty_function_plugin = array(
-        /*
-         *  TODO: write user defined smarty function here.
-         *
-         *  Example:
-         *
-         *  'smarty_function_foo_bar',
-         */
-    );
-
-    /**
-     *  @var    array   smarty block definition.
-     */
-    var $smarty_block_plugin = array(
-        /*
-         *  TODO: write user defined smarty block here.
-         *
-         *  Example:
-         * 
-         *  'smarty_block_foo_bar',
-         */
-    );
-
-    /**
-     *  @var    array   smarty prefilter definition.
-     */
-    var $smarty_prefilter_plugin = array(
-        /*
-         *  TODO: write user defined smarty prefilter here.
-         *
-         *  Example:
-         *
-         *  'smarty_prefilter_foo_bar',
-         */
-    );
-
-    /**
-     *  @var    array   smarty postfilter definition.
-     */
-    var $smarty_postfilter_plugin = array(
-        /*
-         *  TODO: write user defined smarty postfilter here.
-         *
-         *  Example:
-         *
-         *  'smarty_postfilter_foo_bar',
-         */
-    );
-
-    /**
-     *  @var    array   smarty outputfilter definition.
-     */
-    var $smarty_outputfilter_plugin = array(
-        /*
-         *  TODO: write user defined smarty outputfilter here.
-         *
-         *  Example:
-         *
-         *  'smarty_outputfilter_foo_bar',
-         */
-    );
-
     /**#@-*/
 
     /**
